--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>W. Noticias</title>
 </head>
 <body>
-    <script src="./script.js"></script>
+    <header>
+        <img src="./assets/images/logo.svg" alt="logo do saite de noticias">
+
+        <button>
+            <img src="./assets/images/icon-menu.svg" alt="icone menu hamburguer">
+        </button>
+    </header>
+
+    <main>
+        <section>
+            <img src="./assets/images/image-web-3-mobile.jpg" alt="icone de puzzle colorido">
+
+            <h1>O futuro brilhante da Web 3.0?</h1>
+
+            <P>Nós mergulhamos na próxima evolução da web
+                que afirma devolver o poder das plataformas
+                para as mãos das pessoas. Mas sera que ela
+                realmente estå cumprindo sua promessa?</P>
+            <Button>ler mais</Button>
+        </section>
+    </main>
 </body>
 </html>
