desenvolvimento do HTML - segunda seção completa

--- a/index.html
+++ b/index.html
@@ -27,6 +27,30 @@
                 realmente estå cumprindo sua promessa?</P>
             <Button>ler mais</Button>
         </section>
+
+        <section>
+            <h2>novo</h2>
+
+            <div>
+                <h2></h2>
+                
+                <div>
+                    <h3>Hidrogênio VS Carros Elétricos</h3>
+                    <p>Os carros movidos a hidrogênio alguma
+                        vez alcançarão os veiculos elétricos?</p>
+                </div>
+                <div>
+                    <h3>A arte gerada por lA</h3>
+                    <p>Quais são os possiveis efeitos adversos
+                        da geração de imagens por IA sob demanda?</p>
+                </div>
+                <div>
+                    <h3>O VC Funding está esgotado?</h3>
+                    <p>O financiamento privado por empresas de
+                        capital de risco caiu 50%</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
