--- a/index.html
+++ b/index.html
@@ -51,6 +51,36 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <div>
+                <img src="./assets/images/image-retro-pcs.jpg" alt="imagens de computadores antigos">
+
+                <div>
+                    <strong>01</strong>
+                    <h2>Revivendo PCs antigos</h2>
+                    <p>E se PCs antigos pudessem receber peças mdernas?</p>
+                </div>
+            </div>
+
+            <div>
+                <img src="./assets/images/image-top-laptops.jpg" alt="imagem de laptop">
+                <div>
+                    <strong>02</strong>
+                    <h2>Top 10 laptops de 2024</h2>
+                    <p>Nossas melhores escolhas para diversas necessidades.</p>
+                </div>
+            </div>
+
+            <div>
+                <img src="./assets/images/image-gaming-growth.jpg" alt="imagem de um controle de video game">
+                <div>
+                    <strong>03</strong>
+                    <h2>O Crescimento dos jogos</h2>
+                    <p>Como a pandemia tem gerado novas oportunidades</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
