--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>W. Noticias</title>
 </head>
 <body>
-    <header>
+    <header class="header-mobile">
         <img src="./assets/images/logo.svg" alt="logo do saite de noticias">
 
         <button>
