Estilização da segunda seção finalizada

--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
             <Button>ler mais</Button>
         </section>
 
-        <section>
+        <section class="segunda-secao">
             <h2>novo</h2>
 
             <div>
                 <h2></h2>
                 
-                <div>
+                <div class="margin-border-padding">
                     <h3>Hidrogênio VS Carros Elétricos</h3>
                     <p>Os carros movidos a hidrogênio alguma
                         vez alcançarão os veiculos elétricos?</p>
                 </div>
-                <div>
+                <div class="margin-border-padding">
                     <h3>A arte gerada por lA</h3>
                     <p>Quais são os possiveis efeitos adversos
                         da geração de imagens por IA sob demanda?</p>
