--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <title>W. Noticias</title>
 </head>
-<body>
+<body class="menu-open">
     <header class="header-mobile">
         <img src="./assets/images/logo.svg" alt="logo do saite de noticias">
 
@@ -20,6 +20,10 @@
         </button>
 
         <nav>
+            <button>
+                <img src="./assets/images/icon-menu-close.svg" alt="icone de x para fechar menu">
+            </button>
+
             <a href="#">Home</a>
             <a href="#">Novo</a>
             <a href="#">Popular</a>
