--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <title>W. Noticias</title>
 </head>
 <body>
-    <header class="header-mobile">
+    <header>
         <img src="./assets/images/logo.svg" alt="logo do saite de noticias">
 
         <button>
             <img src="./assets/images/icon-menu.svg" alt="icone menu hamburguer">
         </button>
 
-        <nav>
+        <nav class="mobile">
             <button>
                 <img src="./assets/images/icon-menu-close.svg" alt="icone de x para fechar menu">
             </button>
@@ -31,14 +31,24 @@
             <a href="#">Trending</a>
             <a href="#">Categorias</a>
         </nav>
+
     </header>
 
+    <nav class="desktop">
+        <a href="#">Home</a>
+        <a href="#">Novo</a>
+        <a href="#">Popular</a>
+        <a href="#">Trending</a>
+        <a href="#">Categorias</a>
+    </nav>
     <main>
         <section class="primeira-secao">
-            <img src="./assets/images/image-web-3-mobile.jpg" alt="icone de puzzle colorido">
+            <picture>
+                <source media="(min-width: 700px)" srcset="./assets/images/image-web-3-desktop.jpg">
+                <img src="./assets/images/image-web-3-mobile.jpg" alt="icone de puzzle colorido">
+            </picture>
 
             <h1>O futuro brilhante da Web 3.0?</h1>
-
             <P>Nós mergulhamos na próxima evolução da web
                 que afirma devolver o poder das plataformas
                 para as mãos das pessoas. Mas sera que ela
