--- a/index.html
+++ b/index.html
@@ -49,11 +49,13 @@
             </picture>
 
             <h1>O futuro brilhante da Web 3.0?</h1>
-            <P>Nós mergulhamos na próxima evolução da web
-                que afirma devolver o poder das plataformas
-                para as mãos das pessoas. Mas sera que ela
-                realmente estå cumprindo sua promessa?</P>
-            <Button>ler mais</Button>
+            <div>
+                <P>Nós mergulhamos na próxima evolução da web
+                    que afirma devolver o poder das plataformas
+                    para as mãos das pessoas. Mas sera que ela
+                    realmente estå cumprindo sua promessa?</P>
+                <Button>ler mais</Button>
+            </div>
         </section>
 
         <section class="segunda-secao">
