--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
 
                 <div>
                     <strong>01</strong>
-                    <h2>Revivendo PCs antigos</h2>
+                    <a href="#">
+                        <h2>Revivendo PCs antigos</h2>
+                    </a>
                     <p>E se PCs antigos pudessem receber peças mdernas?</p>
                 </div>
             </div>
@@ -97,7 +99,9 @@
                 <img src="./assets/images/image-top-laptops.jpg" alt="imagem de laptop">
                 <div>
                     <strong>02</strong>
-                    <h2>Top 10 laptops de 2024</h2>
+                    <a href="#">
+                        <h2>Top 10 laptops de 2024</h2>
+                    </a>
                     <p>Nossas melhores escolhas para diversas necessidades.</p>
                 </div>
             </div>
@@ -106,7 +110,9 @@
                 <img src="./assets/images/image-gaming-growth.jpg" alt="imagem de um controle de video game">
                 <div>
                     <strong>03</strong>
-                    <h2>O Crescimento dos jogos</h2>
+                    <a href="#">
+                        <h2>O Crescimento dos jogos</h2>
+                    </a>
                     <p>Como a pandemia tem gerado novas oportunidades</p>
                 </div>
             </div>
