--- a/index.html
+++ b/index.html
@@ -10,88 +10,76 @@
 
     <link rel="stylesheet" href="style.css">
     <script src="./script.js" defer></script>
-    <title>W. Noticias</title>
+    <title>W. Notícias</title>
 </head>
 <body>
     <header>
-        <img src="./assets/images/logo.svg" alt="logo do saite de noticias">
+        <img src="./assets/images/logo.svg" alt="logo do site de notícias W.">
 
         <button>
-            <img src="./assets/images/icon-menu.svg" alt="icone menu hamburguer">
+            <img src="./assets/images/icon-menu.svg" alt="icone do menu hamburguer">
         </button>
 
         <nav class="mobile">
             <button>
-                <img src="./assets/images/icon-menu-close.svg" alt="icone de x para fechar menu">
+                <img src="./assets/images/icon-menu-close.svg" alt="ícone de X para fechar o menu">
             </button>
 
             <a href="#">Home</a>
             <a href="#">Novo</a>
             <a href="#">Popular</a>
-            <a href="#">Trending</a>
+            <a href="#">Treding</a>
             <a href="#">Categorias</a>
         </nav>
 
+        <nav class="desktop">
+            <a href="#">Home</a>
+            <a href="#">Novo</a>
+            <a href="#">Popular</a>
+            <a href="#">Treding</a>
+            <a href="#">Categorias</a>
+        </nav>
     </header>
 
-    <nav class="desktop">
-        <a href="#">Home</a>
-        <a href="#">Novo</a>
-        <a href="#">Popular</a>
-        <a href="#">Trending</a>
-        <a href="#">Categorias</a>
-    </nav>
     <main>
         <section class="primeira-secao">
             <picture>
                 <source media="(min-width: 700px)" srcset="./assets/images/image-web-3-desktop.jpg">
-                <img src="./assets/images/image-web-3-mobile.jpg" alt="icone de puzzle colorido">
+                <img src="./assets/images/image-web-3-mobile.jpg" alt="ícone de puzzle colorido">
             </picture>
-
             <h1>O futuro brilhante da Web 3.0?</h1>
             <div>
-                <P>Nós mergulhamos na próxima evolução da web
-                    que afirma devolver o poder das plataformas
-                    para as mãos das pessoas. Mas sera que ela
-                    realmente estå cumprindo sua promessa?</P>
-                <Button>ler mais</Button>
+                <p>Nós mergulhamos na próxima evolução da web que afirma devolver o poder das plataformas para as mãos das pessoas. Mas será que ela realmente está cumprindo sua promessa?</p>
+                <button>Ler Mais</button>
             </div>
         </section>
 
         <section class="segunda-secao">
-            <h2>novo</h2>
-
-            <div>
-                <h2></h2>
-                
-                <div class="margin-border-padding">
-                    <h3>Hidrogênio VS Carros Elétricos</h3>
-                    <p>Os carros movidos a hidrogênio alguma
-                        vez alcançarão os veiculos elétricos?</p>
-                </div>
-                <div class="margin-border-padding">
-                    <h3>A arte gerada por lA</h3>
-                    <p>Quais são os possiveis efeitos adversos
-                        da geração de imagens por IA sob demanda?</p>
-                </div>
-                <div>
-                    <h3>O VC Funding está esgotado?</h3>
-                    <p>O financiamento privado por empresas de
-                        capital de risco caiu 50%</p>
-                </div>
-            </div>
+            <h2>Novo</h2>
+           <div class="margin-border-padding">
+            <h3>Hidrogênio VS Carros Elétricos</h3>
+            <p>Os carros movidos a hidrogênio alguma vez alcançarão os veículos elétricos?</p>
+           </div>
+           <div class="margin-border-padding">
+            <h3>A arte gerada por IA</h3>
+            <p>Quais são os possíveis efeitos adversos da geração de imagens por IA sob</p>
+           </div>
+           <div>
+            <h3>O VC Funding está esgotado?</h3>
+            <p>O financiamento privado por empresas de capital de risco caiu 50%.</p>
+           </div>
         </section>
 
         <section class="terceira-secao">
             <div>
-                <img src="./assets/images/image-retro-pcs.jpg" alt="imagens de computadores antigos">
+                <img src="./assets/images/image-retro-pcs.jpg" alt="imagem de computadores antigos">
 
                 <div>
                     <strong>01</strong>
                     <a href="#">
                         <h2>Revivendo PCs antigos</h2>
                     </a>
-                    <p>E se PCs antigos pudessem receber peças mdernas?</p>
+                    <p>E se PCs antigos pudessem receber peças modernas?</p>
                 </div>
             </div>
 
@@ -100,7 +88,7 @@
                 <div>
                     <strong>02</strong>
                     <a href="#">
-                        <h2>Top 10 laptops de 2024</h2>
+                        <h2>Top 10 Laptops de 2022</h2>
                     </a>
                     <p>Nossas melhores escolhas para diversas necessidades.</p>
                 </div>
@@ -111,9 +99,9 @@
                 <div>
                     <strong>03</strong>
                     <a href="#">
-                        <h2>O Crescimento dos jogos</h2>
+                        <h2>O Crescimento dos Jogos</h2>
                     </a>
-                    <p>Como a pandemia tem gerado novas oportunidades</p>
+                    <p>Como a pandemia tem gerado novas oportunidades.</p>
                 </div>
             </div>
         </section>
