--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="#">Home</a>
             <a href="#">Novo</a>
             <a href="#">Popular</a>
-            <a href="#">Treding</a>
+            <a href="#">Trending</a>
             <a href="#">Categorias</a>
         </nav>
 
@@ -36,7 +36,7 @@
             <a href="#">Home</a>
             <a href="#">Novo</a>
             <a href="#">Popular</a>
-            <a href="#">Treding</a>
+            <a href="#">Trending</a>
             <a href="#">Categorias</a>
         </nav>
     </header>
